--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -229,6 +229,18 @@ ip security
    ike policy CP-IKE-POLICY
       local-id 192.168.142.2
    !
+   ike policy IE-ZSCALER-EXIT-POLICY-1-IKE-POLICY
+      local-id fqdn cv-pathfinder-edge1_ZSCALER-EXIT-POLICY-1@test.local
+      ike-lifetime 24
+      encryption aes256
+      dh-group 24
+   !
+   ike policy IE-ZSCALER-EXIT-POLICY-2-IKE-POLICY
+      local-id fqdn cv-pathfinder-edge1_ZSCALER-EXIT-POLICY-2@test.local
+      ike-lifetime 24
+      encryption aes256
+      dh-group 24
+   !
    sa policy DP-SA-POLICY
       esp encryption aes256gcm128
       pfs dh-group 14
@@ -236,6 +248,18 @@ ip security
    sa policy CP-SA-POLICY
       esp encryption aes256gcm128
       pfs dh-group 14
+   !
+   sa policy IE-ZSCALER-EXIT-POLICY-1-SA-POLICY
+      esp integrity sha256
+      esp encryption null
+      sa lifetime 8 hours
+      pfs dh-group 24
+   !
+   sa policy IE-ZSCALER-EXIT-POLICY-2-SA-POLICY
+      esp integrity sha256
+      esp encryption null
+      sa lifetime 8 hours
+      pfs dh-group 24
    !
    profile DP-PROFILE
       sa-policy DP-SA-POLICY
@@ -251,6 +275,18 @@ ip security
       shared-key 7 ABCDEF1234567890
       dpd 10 50 clear
       mode transport
+   !
+   profile IE-ZSCALER-EXIT-POLICY-1-PROFILE
+      ike-policy IE-ZSCALER-EXIT-POLICY-1-IKE-POLICY
+      sa-policy IE-ZSCALER-EXIT-POLICY-1-SA-POLICY
+      shared-key 7 cv-pathfinder-edge1_ZSCALER-EXIT-POLICY-1_THIS_SHOULD_BE_VAULTED
+      dpd 10 60 clear
+   !
+   profile IE-ZSCALER-EXIT-POLICY-2-PROFILE
+      ike-policy IE-ZSCALER-EXIT-POLICY-2-IKE-POLICY
+      sa-policy IE-ZSCALER-EXIT-POLICY-2-SA-POLICY
+      shared-key 7 cv-pathfinder-edge1_ZSCALER-EXIT-POLICY-2_THIS_SHOULD_BE_VAULTED
+      dpd 10 60 clear
    !
    key controller
       profile DP-PROFILE
