--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -321,6 +321,16 @@ ip_security:
   ike_policies:
   - name: CP-IKE-POLICY
     local_id: 192.168.142.2
+  - name: IE-ZSCALER-EXIT-POLICY-1-IKE-POLICY
+    local_id_fqdn: cv-pathfinder-edge1_ZSCALER-EXIT-POLICY-1@test.local
+    ike_lifetime: 24
+    encryption: aes256
+    dh_group: 24
+  - name: IE-ZSCALER-EXIT-POLICY-2-IKE-POLICY
+    local_id_fqdn: cv-pathfinder-edge1_ZSCALER-EXIT-POLICY-2@test.local
+    ike_lifetime: 24
+    encryption: aes256
+    dh_group: 24
   sa_policies:
   - name: DP-SA-POLICY
     esp:
@@ -330,6 +340,20 @@ ip_security:
     esp:
       encryption: aes256gcm128
     pfs_dh_group: 14
+  - name: IE-ZSCALER-EXIT-POLICY-1-SA-POLICY
+    pfs_dh_group: 24
+    sa_lifetime:
+      value: 8
+    esp:
+      integrity: sha256
+      encryption: disabled
+  - name: IE-ZSCALER-EXIT-POLICY-2-SA-POLICY
+    pfs_dh_group: 24
+    sa_lifetime:
+      value: 8
+    esp:
+      integrity: sha256
+      encryption: disabled
   profiles:
   - name: DP-PROFILE
     sa_policy: DP-SA-POLICY
@@ -350,6 +374,22 @@ ip_security:
       time: 50
       action: clear
     mode: transport
+  - name: IE-ZSCALER-EXIT-POLICY-1-PROFILE
+    ike_policy: IE-ZSCALER-EXIT-POLICY-1-IKE-POLICY
+    sa_policy: IE-ZSCALER-EXIT-POLICY-1-SA-POLICY
+    shared_key: cv-pathfinder-edge1_ZSCALER-EXIT-POLICY-1_THIS_SHOULD_BE_VAULTED
+    dpd:
+      interval: 10
+      time: 60
+      action: clear
+  - name: IE-ZSCALER-EXIT-POLICY-2-PROFILE
+    ike_policy: IE-ZSCALER-EXIT-POLICY-2-IKE-POLICY
+    sa_policy: IE-ZSCALER-EXIT-POLICY-2-SA-POLICY
+    shared_key: cv-pathfinder-edge1_ZSCALER-EXIT-POLICY-2_THIS_SHOULD_BE_VAULTED
+    dpd:
+      interval: 10
+      time: 60
+      action: clear
   key_controller:
     profile: DP-PROFILE
 management_security:
