Fix: Correct host name in router service-insertion

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -681,15 +681,15 @@ ip_nat:
 router_service_insertion:
   enabled: true
   connections:
-  - name: ZSCALER-CONN-100
+  - name: IE-Tunnel100
     tunnel_interface:
       primary: Tunnel100
     monitor_connectivity_host: ZSTunnel100
-  - name: ZSCALER-CONN-101
+  - name: IE-Tunnel101
     tunnel_interface:
       primary: Tunnel101
     monitor_connectivity_host: ZSTunnel101
-  - name: ZSCALER-CONN-102
+  - name: IE-Tunnel102
     tunnel_interface:
       primary: Tunnel102
     monitor_connectivity_host: ZSTunnel102
