--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -201,13 +201,13 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
-   connection ZSCALER-CONN-100
+   connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host ZSTunnel100
-   connection ZSCALER-CONN-101
+   connection IE-Tunnel101
       interface Tunnel101 primary
       monitor connectivity host ZSTunnel101
-   connection ZSCALER-CONN-102
+   connection IE-Tunnel102
       interface Tunnel102 primary
       monitor connectivity host ZSTunnel102
 !
