--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -192,22 +192,22 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
-   connection ZSCALER-CONN-100
+   connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host ZSTunnel100
-   connection ZSCALER-CONN-101
+   connection IE-Tunnel101
       interface Tunnel101 primary
       monitor connectivity host ZSTunnel101
-   connection ZSCALER-CONN-102
+   connection IE-Tunnel102
       interface Tunnel102 primary
       monitor connectivity host ZSTunnel102
-   connection ZSCALER-CONN-110
+   connection IE-Tunnel110
       interface Tunnel110 primary
       monitor connectivity host ZSTunnel110
-   connection ZSCALER-CONN-111
+   connection IE-Tunnel111
       interface Tunnel111 primary
       monitor connectivity host ZSTunnel111
-   connection ZSCALER-CONN-112
+   connection IE-Tunnel112
       interface Tunnel112 primary
       monitor connectivity host ZSTunnel112
 !
