--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -650,27 +650,27 @@ ip_nat:
 router_service_insertion:
   enabled: true
   connections:
-  - name: ZSCALER-CONN-100
+  - name: IE-Tunnel100
     tunnel_interface:
       primary: Tunnel100
     monitor_connectivity_host: ZSTunnel100
-  - name: ZSCALER-CONN-101
+  - name: IE-Tunnel101
     tunnel_interface:
       primary: Tunnel101
     monitor_connectivity_host: ZSTunnel101
-  - name: ZSCALER-CONN-102
+  - name: IE-Tunnel102
     tunnel_interface:
       primary: Tunnel102
     monitor_connectivity_host: ZSTunnel102
-  - name: ZSCALER-CONN-110
+  - name: IE-Tunnel110
     tunnel_interface:
       primary: Tunnel110
     monitor_connectivity_host: ZSTunnel110
-  - name: ZSCALER-CONN-111
+  - name: IE-Tunnel111
     tunnel_interface:
       primary: Tunnel111
     monitor_connectivity_host: ZSTunnel111
-  - name: ZSCALER-CONN-112
+  - name: IE-Tunnel112
     tunnel_interface:
       primary: Tunnel112
     monitor_connectivity_host: ZSTunnel112
