Fix: Correct host name in router service-insertion

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -201,15 +201,15 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
-   connection IE-Tunnel100
+   connection ZSCALER-CONN-100
       interface Tunnel100 primary
-      monitor connectivity host ZSTunnel100
-   connection IE-Tunnel101
+      monitor connectivity host IE-Tunnel100
+   connection ZSCALER-CONN-101
       interface Tunnel101 primary
-      monitor connectivity host ZSTunnel101
-   connection IE-Tunnel102
+      monitor connectivity host IE-Tunnel101
+   connection ZSCALER-CONN-102
       interface Tunnel102 primary
-      monitor connectivity host ZSTunnel102
+      monitor connectivity host IE-Tunnel102
 !
 spanning-tree mode none
 !
