--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -650,30 +650,30 @@ ip_nat:
 router_service_insertion:
   enabled: true
   connections:
-  - name: IE-Tunnel100
+  - name: ZSCALER-CONN-100
     tunnel_interface:
       primary: Tunnel100
-    monitor_connectivity_host: ZSTunnel100
-  - name: IE-Tunnel101
+    monitor_connectivity_host: IE-Tunnel100
+  - name: ZSCALER-CONN-101
     tunnel_interface:
       primary: Tunnel101
-    monitor_connectivity_host: ZSTunnel101
-  - name: IE-Tunnel102
+    monitor_connectivity_host: IE-Tunnel101
+  - name: ZSCALER-CONN-102
     tunnel_interface:
       primary: Tunnel102
-    monitor_connectivity_host: ZSTunnel102
-  - name: IE-Tunnel110
+    monitor_connectivity_host: IE-Tunnel102
+  - name: ZSCALER-CONN-110
     tunnel_interface:
       primary: Tunnel110
-    monitor_connectivity_host: ZSTunnel110
-  - name: IE-Tunnel111
+    monitor_connectivity_host: IE-Tunnel110
+  - name: ZSCALER-CONN-111
     tunnel_interface:
       primary: Tunnel111
-    monitor_connectivity_host: ZSTunnel111
-  - name: IE-Tunnel112
+    monitor_connectivity_host: IE-Tunnel111
+  - name: ZSCALER-CONN-112
     tunnel_interface:
       primary: Tunnel112
-    monitor_connectivity_host: ZSTunnel112
+    monitor_connectivity_host: IE-Tunnel112
 router_internet_exit:
   exit_groups:
   - name: ZSCALER-EXIT-POLICY-1_PRI
