Fix: Missing exit-groups in policies

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -126,6 +126,9 @@ router internet-exit
         local connection ZSCALER-CONN-102
     !
     policy ZSCALER-EXIT-POLICY-1
+        exit-group ZSCALER-EXIT-POLICY-1_PRI
+        exit-group ZSCALER-EXIT-POLICY-1_SEC
+        exit-group ZSCALER-EXIT-POLICY-1_TER
         exit-group system-default-exit-group
 !
 router path-selection
