--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -128,9 +128,14 @@ router internet-exit
         local connection ZSCALER-CONN-112
     !
     policy ZSCALER-EXIT-POLICY-1
+        exit-group ZSCALER-EXIT-POLICY-1_PRI
+        exit-group ZSCALER-EXIT-POLICY-1_SEC
+        exit-group ZSCALER-EXIT-POLICY-1_TER
         exit-group system-default-exit-group
     !
     policy ZSCALER-EXIT-POLICY-2
+        exit-group ZSCALER-EXIT-POLICY-2_PRI
+        exit-group ZSCALER-EXIT-POLICY-2_SEC
         exit-group ZSCALER-EXIT-POLICY-2_TER
 !
 router path-selection
