--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -362,6 +362,7 @@ interface Tunnel100
    description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
    ip address unnumbered Ethernet3
+   ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -371,6 +372,7 @@ interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
    ip address unnumbered Ethernet3
+   ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -380,6 +382,7 @@ interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
    ip address unnumbered Ethernet3
+   ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
@@ -389,6 +392,7 @@ interface Tunnel110
    description Internet Exit ZSCALER-EXIT-POLICY-2 PRI
    mtu 1394
    ip address unnumbered Ethernet3
+   ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -398,6 +402,7 @@ interface Tunnel111
    description Internet Exit ZSCALER-EXIT-POLICY-2 SEC
    mtu 1394
    ip address unnumbered Ethernet3
+   ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -407,6 +412,7 @@ interface Tunnel112
    description Internet Exit ZSCALER-EXIT-POLICY-2 TER
    mtu 1394
    ip address unnumbered Ethernet3
+   ip nat service-profile VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
