--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -88,6 +88,7 @@ all:
         duplicate-vni-l2vlans-vxlan-interface:
         duplicate-interfaces-underlay:
         duplicate-ip-address-uplink-switch-router-bgp:
+        duplicate-tunnel-interface-internet-exit:
         failure-missing-evpn-vlan-bundle:
         failure-missing-evpn-vlan-bundle_svi:
         failure-missing-evpn-multicast-l3-with-pim:
