Refactor(eos_cli_config_gen): Refactor event-handlers model to accommodate other triggers with their specificities

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
@@ -42,3 +42,29 @@ event_handlers:
       action: all
     action_type: bash
     action: echo "on-maintenance"
+  - name: trigger-on-logging
+    trigger: on-logging
+    trigger_on_logging:
+      poll_interval: 10
+    action_type: bash
+    action: echo "on-logging"
+  - name: trigger-on-counters
+    trigger: on-counters
+    trigger_on_counters:
+      poll_interval: 10
+    action_type: bash
+    action: echo "on-counters"
+  - name: trigger-on-intf
+    trigger: on-intf
+    trigger_on_intf:
+      interface: Ethernet4
+      ip: true
+      ip6: true
+      operstatus: true
+    action_type: bash
+    action: echo "on-intf"
+  - name: trigger-vm-tracer
+    trigger: "vm-tracer vm"
+    action_type: bash
+    action: echo "vm-tracer vm"
+  
