--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -28,6 +28,20 @@ event-handler trigger-on-boot
    trigger on-boot
    action bash echo "on-boot"
 !
+event-handler trigger-on-counters
+   trigger on-counters
+      poll interval 10
+   action bash echo "on-counters"
+!
+event-handler trigger-on-intf
+   trigger on-intf Ethernet4 operstatus ip ip6
+   action bash echo "on-intf"
+!
+event-handler trigger-on-logging
+   trigger on-logging
+      poll interval 10
+   action bash echo "on-logging"
+!
 event-handler trigger-on-maintenance1
    trigger on-maintenance enter interface Management3 after stage linkdown
    action bash echo "on-maintenance"
@@ -39,5 +53,9 @@ event-handler trigger-on-maintenance2
 event-handler trigger-on-maintenance3
    trigger on-maintenance enter bgp 10.0.0.2 vrf vrf1 all
    action bash echo "on-maintenance"
+!
+event-handler trigger-vm-tracer
+   trigger vm-tracer vm
+   action bash echo "vm-tracer vm"
 !
 end
