Fix not generating policy reference when missing local interfaces

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -85,7 +85,6 @@ router adaptive-virtual-topology
       path-selection load-balance LB-PROD-AVT-POLICY-MPLS-ONLY
    !
    profile PROD-AVT-POLICY-VIDEO
-      internet-exit policy ZSCALER-EXIT-POLICY-2
       path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
    !
    profile PROD-AVT-POLICY-VOICE
@@ -248,7 +247,7 @@ ip security
    !
    sa policy IE-ZSCALER-EXIT-POLICY-1-SA-POLICY
       esp integrity sha256
-      esp encryption null
+      esp encryption aes256
       sa lifetime 8 hours
       pfs dh-group 24
    !
