--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -256,13 +256,13 @@ ip security
    !
    sa policy IE-ZSCALER-EXIT-POLICY-1-SA-POLICY
       esp integrity sha256
-      esp encryption null
+      esp encryption aes256
       sa lifetime 8 hours
       pfs dh-group 24
    !
    sa policy IE-ZSCALER-EXIT-POLICY-2-SA-POLICY
       esp integrity sha256
-      esp encryption null
+      esp encryption aes256
       sa lifetime 8 hours
       pfs dh-group 24
    !
