--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -362,7 +362,7 @@ ip_security:
       value: 8
     esp:
       integrity: sha256
-      encryption: disabled
+      encryption: aes256
   profiles:
   - name: DP-PROFILE
     sa_policy: DP-SA-POLICY
@@ -426,7 +426,6 @@ router_adaptive_virtual_topology:
     internet_exit_policy: ZSCALER-EXIT-POLICY-1
   - name: PROD-AVT-POLICY-VIDEO
     load_balance_policy: LB-PROD-AVT-POLICY-VIDEO
-    internet_exit_policy: ZSCALER-EXIT-POLICY-2
   - name: PROD-AVT-POLICY-MPLS-ONLY
     load_balance_policy: LB-PROD-AVT-POLICY-MPLS-ONLY
   - name: PROD-AVT-POLICY-DEFAULT
