Adding more tests

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/event-handlers.yml
@@ -46,12 +46,14 @@ event_handlers:
     trigger: on-logging
     trigger_on_logging:
       poll_interval: 10
+      regex: "ab*"
     action_type: bash
     action: echo "on-logging"
   - name: trigger-on-counters
     trigger: on-counters
     trigger_on_counters:
       poll_interval: 10
+      condition: bashCmd."FastCli -c 'show interface counters rates'"
     action_type: bash
     action: echo "on-counters"
   - name: trigger-on-intf
