--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
@@ -49,7 +49,7 @@ keys:
         trigger_on_counters:
           type: dict
           keys:
-            conditon:
+            condition:
               type: str
               description: Set the counters condition expression.
             # granularity_per_source:
