--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -31,6 +31,7 @@ event-handler trigger-on-boot
 event-handler trigger-on-counters
    trigger on-counters
       poll interval 10
+      condition bashCmd."FastCli -c 'show interface counters rates'"
    action bash echo "on-counters"
 !
 event-handler trigger-on-intf
@@ -40,6 +41,7 @@ event-handler trigger-on-intf
 event-handler trigger-on-logging
    trigger on-logging
       poll interval 10
+      regex ab*
    action bash echo "on-logging"
 !
 event-handler trigger-on-maintenance1
