Feat(eos_designs): Add metadata for Zscaler internet-exit

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -22,6 +22,9 @@ cv_pathfinder_regions:
     sites:
       - name: Site511
         id: 511
+        resolved_location: # Only used for internet exit metadata. Will probably go away again soon(ish).
+          city: BigCity
+          country: BigCountry
 
 bgp_peer_groups:
   wan_overlay_peers:
