--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/application-traffic-recognition.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/application-traffic-recognition.yml
@@ -98,6 +98,12 @@ application_traffic_recognition:
         tcp_dest_port_set_name: dest_port_set1
         udp_src_port_set_name: src_port_set1
         udp_dest_port_set_name: dest_port_set1
+      - name: l4-app-2
+        protocols:
+          - tcp
+        protocol_ranges:
+          - "27"
+          - "41-44"
   application_profiles:
     - name: app_profile_2
       applications:
