Feat(eos_cli_config_gen): Add l4 to application traffic recognition (#3780)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/application-traffic-recognition.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/application-traffic-recognition.cfg
@@ -34,6 +34,14 @@ application traffic recognition
       protocol tcp
       protocol 7-11, 21
    !
+   application l4 l4-app-1
+      protocol tcp source port field-set src_port_set1 destination port field-set dest_port_set1
+      protocol udp source port field-set src_port_set1 destination port field-set dest_port_set1
+   !
+   application l4 l4-app-2
+      protocol tcp
+      protocol 27, 41-44
+   !
    category best-effort
       application aimini service peer-to-peer
       application apple_update service software-update
