--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/application_traffic_recognition.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/application_traffic_recognition.schema.yml
@@ -80,10 +80,11 @@ keys:
         keys:
           ipv4_applications:
             type: list
-            description: List of user defined IPv4 applications.
+            description: List of user defined IPv4 applications. The name should be unique over all defined applications (ipv4 and l4).
             primary_key: name
             items:
               type: dict
+              $ref: "eos_cli_config_gen#/$defs/application_traffic_recognition_application"
               keys:
                 name:
                   type: str
@@ -94,67 +95,17 @@ keys:
                 dest_prefix_set_name:
                   type: str
                   description: Destination prefix set name.
-                protocols:
-                  type: list
-                  description: |-
-                    List of protocols to consider for this application.
-
-                    To use port field-sets (source, destination or both), the list
-                    must contain only one or two protocols, either `tcp` or `udp`.
-                    When using both protocols, one line is rendered for each in the configuration,
-                    hence the field-sets must have the same value for `tcp_src_port_set_name` and
-                    `udp_src_port_set_name` and for `tcp_dest_port_set_name` and `udp_dest_port_set_name`
-                    if set in order to generate valid configuration in EOS.
-                  items:
-                    type: str
-                    valid_values:
-                      - ahp
-                      - esp
-                      - icmp
-                      - igmp
-                      - ospf
-                      - pim
-                      - rsvp
-                      - tcp
-                      - udp
-                      - vrrp
-                protocol_ranges:
-                  type: list
-                  description: |-
-                    Accept protocol value(s) or range(s).
-                    Protocol values can be between 1 and 255.
-                  items:
-                    type: str
-                    convert_types:
-                      - int
-                udp_src_port_set_name:
+          l4_applications:
+            type: list
+            description: List of user defined L4 applications. The name should be unique over all defined applications (ipv4 and l4).
+            primary_key: name
+            items:
+              type: dict
+              $ref: "eos_cli_config_gen#/$defs/application_traffic_recognition_application"
+              keys:
+                name:
                   type: str
-                  description: |-
-                    Name of field set for UDP source ports.
-
-                    When the `protocols` list contain both `tcp` and `udp`, this key value
-                    must be the same as `tcp_src_port_set_name`.
-                tcp_src_port_set_name:
-                  type: str
-                  description: |-
-                    Name of field set for TCP source ports.
-
-                    When the `protocols` list contain both `tcp` and `udp`, this key value
-                    must be the same as `udp_src_port_set_name`.
-                udp_dest_port_set_name:
-                  type: str
-                  description: |-
-                    Name of field set for UDP destination ports.
-
-                    When the `protocols` list contain both `tcp` and `udp`, this key value
-                    must be the same as `tcp_dest_port_set_name`.
-                tcp_dest_port_set_name:
-                  type: str
-                  description: |-
-                    Name of field set for TCP destination ports.
-
-                    When the `protocols` list contain both `tcp` and `udp`, this key value
-                    must be the same as `udp_dest_port_set_name`.
+                  description: Application name.
       application_profiles:
         type: list
         description: Group of applications.
