Refactor: Address PR comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -18,7 +18,7 @@ ip as-path access-list ASPATH-WAN permit 65000 any
 !
 !
 ip nat profile VRF-AWARE-NAT
-   ip nat source dynamic access-list ALLOW_ALL pool PORT_ONLY_POOL
+   ip nat source dynamic access-list ALLOW-ALL pool PORT-ONLY-POOL
 !
 hostname cv-pathfinder-edge
 !
@@ -116,13 +116,13 @@ router adaptive-virtual-topology
 router internet-exit
     !
     exit-group ZSCALER-EXIT-POLICY-1_PRI
-        local connection ZSCALER-CONN-100
+        local connection IE-Tunnel100
     !
     exit-group ZSCALER-EXIT-POLICY-1_SEC
-        local connection ZSCALER-CONN-101
+        local connection IE-Tunnel101
     !
     exit-group ZSCALER-EXIT-POLICY-1_TER
-        local connection ZSCALER-CONN-102
+        local connection IE-Tunnel102
     !
     policy ZSCALER-EXIT-POLICY-1
         exit-group ZSCALER-EXIT-POLICY-1_PRI
@@ -203,13 +203,13 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
-   connection ZSCALER-CONN-100
+   connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host IE-Tunnel100
-   connection ZSCALER-CONN-101
+   connection IE-Tunnel101
       interface Tunnel101 primary
       monitor connectivity host IE-Tunnel101
-   connection ZSCALER-CONN-102
+   connection IE-Tunnel102
       interface Tunnel102 primary
       monitor connectivity host IE-Tunnel102
 !
@@ -446,7 +446,7 @@ monitor connectivity
       ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
 !
-ip access-list ALLOW_ALL
+ip access-list ALLOW-ALL
    10 permit ip any any
 !
 ip routing
@@ -466,7 +466,7 @@ ip prefix-list PL-STATIC-VRF-DEFAULT
 ip route 172.16.0.0/16 172.16.5.4
 ip route 66.66.66.0/24 172.17.0.0
 !
-ip nat pool PORT_ONLY_POOL port-only
+ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
