--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -18,7 +18,7 @@ ip as-path access-list ASPATH-WAN permit 65000 any
 !
 !
 ip nat profile VRF-AWARE-NAT
-   ip nat source dynamic access-list ALLOW_ALL pool PORT_ONLY_POOL
+   ip nat source dynamic access-list ALLOW-ALL pool PORT-ONLY-POOL
 !
 hostname cv-pathfinder-edge1
 !
@@ -110,22 +110,22 @@ router adaptive-virtual-topology
 router internet-exit
     !
     exit-group ZSCALER-EXIT-POLICY-1_PRI
-        local connection ZSCALER-CONN-100
+        local connection IE-Tunnel100
     !
     exit-group ZSCALER-EXIT-POLICY-1_SEC
-        local connection ZSCALER-CONN-101
+        local connection IE-Tunnel101
     !
     exit-group ZSCALER-EXIT-POLICY-1_TER
-        local connection ZSCALER-CONN-102
+        local connection IE-Tunnel102
     !
     exit-group ZSCALER-EXIT-POLICY-2_PRI
-        local connection ZSCALER-CONN-110
+        local connection IE-Tunnel110
     !
     exit-group ZSCALER-EXIT-POLICY-2_SEC
-        local connection ZSCALER-CONN-111
+        local connection IE-Tunnel111
     !
     exit-group ZSCALER-EXIT-POLICY-2_TER
-        local connection ZSCALER-CONN-112
+        local connection IE-Tunnel112
     !
     policy ZSCALER-EXIT-POLICY-1
         exit-group ZSCALER-EXIT-POLICY-1_PRI
@@ -197,22 +197,22 @@ router path-selection
       path-group INET priority 2
 !
 router service-insertion
-   connection ZSCALER-CONN-100
+   connection IE-Tunnel100
       interface Tunnel100 primary
       monitor connectivity host IE-Tunnel100
-   connection ZSCALER-CONN-101
+   connection IE-Tunnel101
       interface Tunnel101 primary
       monitor connectivity host IE-Tunnel101
-   connection ZSCALER-CONN-102
+   connection IE-Tunnel102
       interface Tunnel102 primary
       monitor connectivity host IE-Tunnel102
-   connection ZSCALER-CONN-110
+   connection IE-Tunnel110
       interface Tunnel110 primary
       monitor connectivity host IE-Tunnel110
-   connection ZSCALER-CONN-111
+   connection IE-Tunnel111
       interface Tunnel111 primary
       monitor connectivity host IE-Tunnel111
-   connection ZSCALER-CONN-112
+   connection IE-Tunnel112
       interface Tunnel112 primary
       monitor connectivity host IE-Tunnel112
 !
@@ -520,7 +520,7 @@ monitor connectivity
       ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
 !
-ip access-list ALLOW_ALL
+ip access-list ALLOW-ALL
    10 permit ip any any
 !
 ip routing
@@ -534,7 +534,7 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:511
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
-ip nat pool PORT_ONLY_POOL port-only
+ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
