Add support for mlag_peer_ipv6_pool

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -69,6 +69,10 @@ all:
               hosts:
                 MLAG_ODD_ID_L3LEAF1A:
                 MLAG_ODD_ID_L3LEAF1B:
+            MLAG_IPV6:
+              hosts:
+                MLAG_IPV6_L3LEAF1A:
+                MLAG_IPV6_L3LEAF1B:
             MLAG_SAME_SUBNET:
               hosts:
                 MLAG_SAME_SUBNET_L3LEAF1A:
