--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/fabric_ip_addressing.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/fabric_ip_addressing.schema.yml
@@ -37,6 +37,14 @@ keys:
             convert_types:
               - str
             description: IPv4 prefix length used for MLAG peer-vlan and L3 point-to-point SVIs over the MLAG peer-link.
+          ipv6_prefix_length:
+            type: int
+            default: 64
+            min: 1
+            max: 127
+            convert_types:
+              - str
+            description: IPv6 prefix length used for MLAG peer-vlan and L3 point-to-point SVIs over the MLAG peer-link.
       p2p_uplinks:
         type: dict
         keys:
